# lab2ip

./: CMakeLists.txt
.github/workflows/: ci.yml  ip.yml
include/: ip_filter.h
src/: ip_filter.cpp  main.cpp
test/: ip_filter_test.cpp
